--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
     git:
       url: https://github.com/breez/breez-sdk-liquid-flutter
   rxdart: ^0.28.0
+  bip39: ^1.0.6
 
 dev_dependencies:
   flutter_test:
