--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -17,6 +17,7 @@ dependencies:
   permission_handler: ^11.3.0
   qr_flutter: ^4.1.0
   share_plus: ^7.2.1
+  shared_preferences: ^2.2.2
 #  breez_liquid:
 #    git:
 #      url: https://github.com/breez/breez-sdk-liquid-dart
