--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,14 +18,10 @@ dependencies:
   qr_flutter: ^4.1.0
   share_plus: ^7.2.1
   shared_preferences: ^2.2.2
-#  breez_liquid:
-#    git:
-#      url: https://github.com/breez/breez-sdk-liquid-dart
-  flutter_breez_liquid:
-    git:
-      url: https://github.com/breez/breez-sdk-liquid-flutter
   rxdart: ^0.28.0
   bip39: ^1.0.6
+  bdk_flutter: ^0.30.0
+  flutter_secure_storage: ^9.0.0
 
 dev_dependencies:
   flutter_test:
