--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   bip39: ^1.0.6
   bdk_flutter: ^0.30.0
   flutter_secure_storage: ^9.0.0
+  local_auth: ^2.3.0
 
 dev_dependencies:
   flutter_test:
